front/kubernetes/create-nodejs-service-manifest.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-service
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: 22137
  selector:
    app: node
---
apiVersion: v1
kind: Service
metadata:
  name: node
  labels:
    app: node
    service: node
spec:
  ports:
    - port: 22137
      name: http
  selector:
    app: node
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-deployment
  labels:
    app: node
    version: v1
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  selector:
    matchLabels:
      app: node    
  template:
    metadata:
      labels:
        app: node
    spec:
      serviceAccountName: frontend-details
      containers:
      - name: node
        image: gcr.io//frontend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 22137
          name: http
          protocol: TCP
